--- a/hobbies.html
+++ b/hobbies.html
@@ -5,35 +5,28 @@
     <title>My Hobbies</title>
   </head>
   <body>
-      <h3><st>My Hobbies</st></h3>
-    <ol type="i">
-      <li>Learn new programming language</li>
-        <ol type="a">
-          <li>Website development</li>
-            <ol type="i">
+    <h3>My Hobbies</h3>
+    <ol>
+      <li>Learn New Programming Language</li>
+        <ol type="i">
+          <li>Website Development</li>
+            <ol type="a">
               <li>HTML</li>
               <li>CSS</li>
               <li>Javascript</li>
             </ol>
-          <li>Mobile App development - </li>
-            <ol type="i">
+          <li>Mobile App Development</li>
+            <ol type="a">
               <li>Android (Java)</li>
-              <li>iOS (Swift 5)</li>
+              <li>iOS (Swift)</li>
             </ol>
-        </ol><br>
-      <li>Reading Books
-        <ol type="a">
-          <li>Non Fiction</li>
-          <li>Self Enrichment</li>
-          <li>Parenting</li>
         </ol>
-      </li><br>
-      <li>Photography</li>
-        <ol type="a">
-          <li>Photo Shooting with DSLR</li>
-          <li>Photo Editing with Adobe Lightroom</li>
-        </ol><br>
-      <li>Swimming</li><br>
+      </li>
+      <li>Reading Non Fiction Books</li>
+      <li>DSLR Photography</li>
+      <li>Home Cooking</li>
+      <li>Pool Swimming</li>
+      <li>Cycling</li>
     </ol>
   </body>
 </html>
