--- a/index.html
+++ b/index.html
@@ -10,87 +10,100 @@
   <table cellspacing="20">
     <tr>
       <td><img src="images/jacob.png" alt="jacob profile picture"></td>
-      <td>  <h1>Jacob In</h1>
-        <em><p>Electrical Engineer of <strong><a href="http://www.climatesystems.com.my">Climate Systems Sdn Bhd</a></strong>.</p></em>
-        <p>I am an Electrical Engineer excels in LV Switchgears design with 10 years of working experiences in Oil & Gas Industry.</p></td>
+      <td>
+        <h1>Jacob In</h1>
+        <p><em><strong>Freelance</strong> in Electrical Engineering</em></p>
+        <p>I am an Electrical Engineer excels in LV Switchgears design with 10 years of working experiences in Oil & Gas Industry.</p>
+      </td>
     </tr>
   </table>
   <hr>
-  <h3><st>Education</st></h3>
-  <ul style="list-style-type:circle;">
+  <h3>Education</h3>
+  <ul>
     <li>Graduated in year 2008 at Universiti Malaysia Sabah for Bachelor's Degree in Engineering (Electrical/Electronic)</li>
+    <li>Graduated in year 2002 at SMK Sri Sentosa for STPM certificate</li>
+    <li>Graduated in year 2000 at SMK Sri Sentosa for SPM certificate</li>
+    <li>Graduated in year 1998 at SMK Sri Sentosa for PMR certificate</li>
+    <li>Graduated in year 1995 at SRJK(C) Kuen Cheng (1) for UPSR certificate</li>
   </ul>
   <hr>
-  <h3>Work Experiences</h3>
-<table border="1">
-  <thead>
-    <tr>
-      <th>Dates</th>
-      <th>Company</th>
-      <th>Position Held</th>
-      <th>Work Experiences</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>03/2019 - 02/2020</td>
-      <td>Climate Systems Sdn Bhd<br>(Construction ACMV)</td>
-      <td>Electrical Engineer</td>
-      <td>1 year experiences in project management for M&E works at construction site
-        <ol>
-        <li>EPCC for ACMV Works for BBCC Lucentia Residence</li>
-        <li>EPCC for BMS Works for BBCC Lucentia Residence</li>
-      </ol></td>
-    </tr>
-    <tr>
-      <td>06/2013 - 01/2019</td>
-      <td>Unit Concept Sdn Bhd<br>(Oil/Gas Engineering)</td>
-      <td>Senior Project Engineer</td>
-      <td>6 years experiences in project management for EPCC works including MCC panel design works for Oil & Gas<br>
-          Industries (Offshore & Onshore)
-        <ol>
-        <li>New MCC for Living Quarters (SMQ‐A) Upgrading for Semarang Redevelopment Project</li>
-        <li>Installation of Fast Loop Panel for Angsi Development Project</li>
-        <li>EPCC for PC12429 Process Gas Chromatograph (PGC) at MLNG, MLNG Dua and MLNG Tiga</li>
-        <li>Installation of Distribution Board Replacement at B2 for Kertih Terminal Sdn Bhd</li>
-        <li>Replacement of Electrical Distribution Box at B2 for Kertih Terminal Sdn Bhd</li>
-        <li>Supply of Distribution Board for TCOT, Kerteh</li>
-        <li>Supply of Control Panel for Full Field Development North Malay Basin</li>
-        <li>Supply ExD HMI for BOB</li>
-        <li>Modification of Liquid Mobile Mixer and preventive maintenance services for Atotech (M) Sdn Bhd</li>
-        <li>Supply of EX Fluorescent lighting and EXE Junction Boxes for BNJT-K & TTJT At TUKAU</li>
-        <li>Supply of LV Switchrack, Lighting and Power DB for Zetung & Anggerik</li>
-        <li>Supply of HVAC MCC Panel for Rapid Pengerang P012B</li>
-        <li>Supply of Junction Boxes for Rapid Pengerang P016B</li>
-      </ol>
-    </tr>
-    <tr>
-      <td>03/2011 - 05/2013</td>
-      <td>Swift Energy Sdn Bhd<br>(Oil/Gas Engineering)</td>
-      <td>Project Engineer</td>
-      <td>2 years experiences in project management and panel design & 1 year experience in panel costing estimation for<br>
-          Low Voltage Switchboard for Motor Control Center (MCC) & Programmable Logic Controller Panel for<br>
-          Industrial Process Control System (IPCS)
-        <ol>
-          <li>IPCS for Boiler Plant</li>
-          <li>Physical Refinery Plant</li>
-          <li>Dry Fractionation Plant</li>
-          <li>Deodorization</li>
-          <li>Shortening</li>
-          <li>Ethanol Plant</li>
-          <li>Tank Farm</li>
-          <li>Utilities</li>
-        </ol>
-      </td>
-    </tr>
-    <tr>
-      <td>10/2009 - 03/2011</td>
-      <td>PowerWell Sdn Bhd<br>(LV Switchgears Manufacturer)</td>
-      <td>Project Engineer</td>
-      <td>1 year of experience in manufacturing environment involving low voltage switchboard design (IEC 60439-1)<br>
-          including MSB (castell key control & fully motorised ACB control), EMSB, AMF (including<br>
-          SYNC AMF PANEL), CAP-BANK, SSB, DB, Motor Starter Panel and Remote Control Panel (HT)<br>
-          List of Completed Projects:
+  <h3>Work Experience</h3>
+  <table cellspacing="15">
+    <thead>
+      <tr>
+        <th>Dates</th>
+        <th>Company</th>
+        <th>Position Held</th>
+        <th>Work Experiences</th>
+        <th>Past Completed Projects</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>03/2019 - 02/2020</td>
+        <td align="center">Climate Systems Sdn Bhd<br>(Construction ACMV)</td>
+        <td align="center">Electrical Engineer</td>
+        <td>1 year experiences in project management for M&E works at construction site</td>
+        <td>
+          <ol>
+            <li>EPCC for ACMV Works for BBCC Lucentia Residence (Partial Completion)</li>
+            <li>EPCC for BMS Works for BBCC Lucentia Residence (Partial Completion)</li>
+          <ol>
+        </td>
+      </tr>
+      <tr>
+        <td>06/2013 - 01/2019</td>
+        <td align="center">Unit Concept Sdn Bhd<br>(Oil/Gas Engineering)</td>
+        <td align="center">Snr. Project Engineer</td>
+        <td>6 years experiences in project management for EPCC works including MCC panel design works for <br>
+            Oil & Gas Industries (Offshore & Onshore)</td>
+        <td>
+          <ol>
+            <li>New MCC for Living Quarters (SMQ‐A) Upgrading for Semarang Redevelopment Project</li>
+            <li>Installation of Fast Loop Panel for Angsi Development Project</li>
+            <li>EPCC for PC12429 Process Gas Chromatograph (PGC) at MLNG, MLNG Dua and MLNG Tiga</li>
+            <li>Installation of Distribution Board Replacement at B2 for Kertih Terminal Sdn Bhd</li>
+            <li>Replacement of Electrical Distribution Box at B2 for Kertih Terminal Sdn Bhd</li>
+            <li>Supply of Distribution Board for TCOT, Kerteh</li>
+            <li>Supply of Control Panel for Full Field Development North Malay Basin</li>
+            <li>Supply ExD HMI for BOB</li>
+            <li>Modification of Liquid Mobile Mixer and preventive maintenance services for Atotech (M) Sdn Bhd</li>
+            <li>Supply of EX Fluorescent lighting and EXE Junction Boxes for BNJT-K & TTJT At TUKAU</li>
+            <li>Supply of LV Switchrack, Lighting and Power DB for Zetung & Anggerik</li>
+            <li>Supply of HVAC MCC Panel for Rapid Pengerang P012B</li>
+            <li>Supply of Junction Boxes for Rapid Pengerang P016B</li>
+          </ol>
+        </td>
+      </tr>
+      <tr>
+        <td>03/2011 - 05/2013</td>
+        <td align="center">Swift Energy Sdn Bhd<br>(Oil/Gas Engineering)</td>
+        <td align="center">Project Engineer</td>
+        <td>2 years experiences in project management and panel design & 1 year experience in panel costing <br>
+            estimation for Low Voltage Switchboard for Motor Control Center (MCC) & Programmable Logic <br>
+            Controller Panel for Industrial Process Control System (IPCS)</td>
+        <td>
+          <ol>
+            <li>IPCS for Boiler Plant</li>
+            <li>Physical Refinery Plant</li>
+            <li>Dry Fractionation Plant</li>
+            <li>Deodorization</li>
+            <li>Shortening</li>
+            <li>Ethanol Plant</li>
+            <li>Tank Farm</li>
+            <li>Utilities</li>
+          </ol>
+        </td>
+      </tr>
+      <tr>
+        <td>10/2009 - 03/2011</td>
+        <td align="center">PowerWell Sdn Bhd<br>(LV Switchgears<br>Manufacturer)</td>
+        <td align="center">Project Engineer</td>
+        <td>1 year of experience in manufacturing environment involving low voltage switchboard design <br>(IEC 60439-1)
+            including MSB (castell key control & fully motorised ACB control), EMSB,<br>
+            AMF (including SYNC AMF PANEL), CAP-BANK, SSB, DB, Motor Starter Panel and Remote Control Panel (HT)
+        </td>
+        <td>
           <ol>
             <li>BADAN PENCEGAH RASUAH, CHERAS</li>
             <li>JAYA JUSCO MAHKOTA CHERAS, MAHKOTA CHERAS</li>
@@ -120,73 +133,74 @@
             <li>SURIAN HOTEL (MUTIARA RINI), KL</li>
             <li>JABATAN PENDIDIKAN NEGARA, PULAU PINANG</li>
           </ol>
-      </td>
-    </tr>
-    <tr>
-      <td>10/2008 - 10/2009</td>
-      <td>Elite Precision<br>
-          Components Sdn Bhd<br>(ACMV Manufacturer)</td>
-      <td>R&D Engineer</td>
-      <td>1 year of experience in manufacturing environment involving product-development of HVAC new products<br>
-          such as Unit Coolers, Axial Fan Silencer Units, Condensing Units, Air Curtains, Coil & Piping for<br>
-          Condensers & AHU
+        </td>
+      </tr>
+      <tr>
+        <td>10/2008 - 10/2009</td>
+        <td align="center">Elite Precision<br>
+            Components Sdn Bhd<br>(ACMV Manufacturer)</td>
+        <td align="center">R&D Engineer</td>
+        <td>1 year of experience in manufacturing environment involving product-development of HVAC <br>
+            new products such as Unit Coolers, Axial Fan Silencer Units, Condensing Units, Air Curtains, <br>
+            Coil & Piping for Condensers & AHU</td>
+        <td>
           <ol>
             <li>CONCEPTUALIZED and refined designs for Unit Coolers. Researched on materials and manufacturing <br>
                 processes to meet design criteria. Engineered sheet-metal parts from concepts. Created 2D mechanical <br>
                 drawings and data sheet for the project. Liaisoned with local vendors to manufacture products. Generated <br>
-                Bill of Material for project execution. RESULTS: Mock-up stage of the projects.</li>
-            <li>GENERATED industrial-design concepts for Axial Fan Silencers. Engineered sheet-metal enclosures from concepts.<br>
-                Created 2D mechanical drawings of projects. Researched latest manufacturing processes and liaisoned with<br>
-                local vendors to manufacture products. Collaborated with vendors to resolve production problems. <br>
-                Generated Bill of Material for project execution. RESULTS: Completed mock-up for the first two model and <br>
-                preparing for other model of the projects</li>
-            <li>GENERATED industrial-design concepts for Ceiling Mounted Evaporator. Engineered sheet-metal enclosures from concepts.<br>
-                Generated Bill of Material for project execution. RESULTS: Design stage of the project.</li>
-            <li>FABRICATED piping coil samples requested by customers. Modified customer design to suit and enhance production capabilities.<br>
-                Created 2D mechanical drawings for the samples. Liaisoned with customers for technical issue for piping and coil drawings.<br>
-                Generated Bill of Material for sample execution. RESULTS: Successful production of various samples over a short period of <br>
+                Bill of Material for project execution. <br>RESULTS: Mock-up stage of the projects.</li>
+            <li>GENERATED industrial-design concepts for Axial Fan Silencers. Engineered sheet-metal enclosures from <br>
+                concepts. Created 2D mechanical drawings of projects. Researched latest manufacturing processes and <br>
+                liaisoned with local vendors to manufacture products. Collaborated with vendors to resolve production <br>
+                problems. Generated Bill of Material for project execution. <br>
+                RESULTS: Completed mock-up for the first two model and preparing for other model of the projects</li>
+            <li>GENERATED industrial-design concepts for Ceiling Mounted Evaporator. Engineered sheet-metal enclosures <br>
+                from concepts. Generated Bill of Material for project execution. <br>
+                RESULTS: Design stage of the project.</li>
+            <li>FABRICATED piping coil samples requested by customers. Modified customer design to suit and enhance <br>
+                production capabilities. Created 2D mechanical drawings for the samples. Liaisoned with customers for <br>
+                technical issue for piping and coil drawings. Generated Bill of Material for sample execution. <br>
+                RESULTS: Successful production of various samples over a short period of <br>
                 time to meet tight deadlines</li>
-            <li>LIAISONED with MIDA for R&D incentive for the benefit of the company. Gathered necessary information from MIDA for the<br>
-                50% tax allowance incentive. Studied all machinery investment for R&D Department in the company.<br>
-                RESULTS: Company decides to cancel the incentive application due to a more attractive incentive options
-            </li>
-            <li>COLLARBORATED with consultant for AHRI (Air –Conditioning, Heating and Refrigeration Institute) certification.<br>
-                Liasoned with Coil Pac Ver 3 Supplier to update the software in accordance to AHRI certification requirements.<br>
+            <li>LIAISONED with MIDA for R&D incentive for the benefit of the company. Gathered necessary information <br>
+                from MIDA for the 50% tax allowance incentive. Studied all machinery investment for R&D Department in the company.<br>
+                RESULTS: Company decides to cancel the incentive application due to a more attractive incentive options</li>
+            <li>COLLARBORATED with consultant for AHRI (Air –Conditioning, Heating and Refrigeration Institute) <br>
+                certification. Liasoned with Coil Pac Ver 3 Supplier to update the software in accordance to AHRI<br>
+                certification requirements. <br>
                 RESULTS: Software review from Coil Pac supplier</li>
           </ol>
-      </td>
-    </tr>
-  </tbody>
-</table>
-<hr>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <hr>
   <h3>Skills</h3>
   <table cellspacing="10">
-    <thead>
-      <tr>
-        <td>MS Word</td>
-        <td>⭐️⭐️⭐️⭐️⭐️</td>
-        <td>MS Excel</td>
-        <td>⭐️⭐️⭐️⭐️⭐️</td>
-        <td>MS Powerpoint</td>
-        <td>⭐️⭐️⭐️⭐️⭐️</td>
-        <td>MS Project</td>
-        <td>⭐️⭐️⭐️⭐️⭐️</td>
-        <td>AutoCad</td>
-        <td>⭐️⭐️⭐️⭐️⭐️</td>
-      </tr>
-      <tr>
-        <td>Photography</td>
-        <td>⭐️⭐️⭐️⭐️</td>
-        <td>Web Developement</td>
-        <td>⭐️⭐️</td>
-        <td>iOS Development</td>
-        <td>⭐️⭐️</td>
-      </tr>
-    </thead>
+    <tr>
+      <td>MS Word</td>
+      <td>⭐️⭐️⭐️⭐️⭐️</td>
+      <td>MS Excel</td>
+      <td>⭐️⭐️⭐️⭐️⭐️</td>
+      <td>MS Powerpoint</td>
+      <td>⭐️⭐️⭐️⭐️⭐️</td>
+      <td>MS Project</td>
+      <td>⭐️⭐️⭐️⭐️⭐️</td>
+    </tr>
+    <tr>
+      <td>AutoCad</td>
+      <td>⭐️⭐️⭐️⭐️⭐️</td>
+      <td>Photography</td>
+      <td>⭐️⭐️⭐️⭐️</td>
+      <td>Web Developement</td>
+      <td>⭐️⭐️</td>
+      <td>iOS Development</td>
+      <td>⭐️⭐️</td>
+    </tr>
   </table>
   <hr>
   <h3>Languages Proficiency</h3>
-  <table>
+  <table cellspacing="10">
     <tr>
       <td>Bahasa Malaysia</td>
       <td>⭐️⭐️⭐️⭐️⭐️</td>
@@ -201,8 +215,8 @@
     </tr>
   </table>
   <hr>
-  <h3>Training Completed</h3>
-  <table>
+  <h3>Completed Training</h3>
+  <table cellspacing="10">
     <tr>
       <td>Jul 2018</td>
       <td>Contract Management Training</td>
@@ -249,8 +263,8 @@
     </tr>
   </table>
   <hr>
-  <h3>Online Courses Completed</h3>
-  <table>
+  <h3>Completed Online Courses</h3>
+  <table cellspacing="10">
     <tr>
       <td>Jan 2015</td>
       <td>Photoshop CC for Photographers - Fundamentals</td>
@@ -312,4 +326,5 @@
   <a href="hobbies.html">My Hobbies</a>
   <a href="contact-me.html">Contact Me</a>
 </body>
+
 </html>
