--- a/contact-me.html
+++ b/contact-me.html
@@ -6,15 +6,20 @@
   </head>
   <body>
     <h1>My Contact Details</h1>
+    <h2>Name</h2>
+    <p>Jacob In Tai Aun</p>
+    <h2>E-mail</h2>
     <p>jacobin83@hotmail.com</p>
+    <h2>Mobile Phone</h2>
+    <p>+60163981285</p>
     <hr>
     <form class="" action="mailto:jacobin83@hotmail.com" method="post" enctype="text/plain">
       <label>Your Name:</label>
-      <input type="text" name="YourName" value=""><br>
+      <input type="text" name="yourName" value=""> <br>
       <label>Your Email:</label>
-      <input type="email" name="YourEmail" value=""><br>
-      <label>Your message:</label><br>
-      <textarea name="YourMessage" rows="10" cols="30"></textarea><br>
+      <input type="email" name="yourEmail" value=""> <br>
+      <label> Your Message:</label> <br>
+      <textarea name="yourMessage" rows="10" cols="30"></textarea> <br>
       <input type="submit" name="">
     </form>
   </body>
